# openarm_ros2

openarm/: README.md
openarm_bimanual_bringup/: CMakeLists.txt  README.md
openarm_bimanual_bringup/config/: controllers.yaml  openarm_bimanual_controllers.yaml
openarm_bimanual_bringup/launch/: openarm_bimanual.launch.py
openarm_bimanual_bringup/utils/: init_bimanual_can.sh
openarm_bimanual_description/: README.md
openarm_bimanual_description/launch/: gazebo.launch.py
openarm_bimanual_description/urdf/: camera_mount.urdf.xacro  openarm_bimanual.urdf.xacro  openarm_sensors.urdf.xacro
openarm_bimanual_moveit_config/: README.md
openarm_bimanual_moveit_config/config/: kinematics.yaml  openarm_bimanual.urdf.xacro
openarm_bimanual_moveit_config/launch/: demo.launch.py
openarm_bringup/: README.md
openarm_bringup/utils/: init_can.sh
openarm_description/: README.md
openarm_description/launch/: gazebo.launch.py
openarm_description/urdf/: openarm.robot.xacro
openarm_description_moveit_config/: .setup_assistant  CMakeLists.txt
openarm_description_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  openarm.ros2_control.xacro  openarm.srdf  openarm.urdf.xacro  ros2_controllers.yaml
openarm_description_moveit_config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
openarm_description_moveit_config/install/openarm_description_moveit_config/share/ament_index/resource_index/package_run_dependencies/: openarm_description_moveit_config
openarm_description_moveit_config/install/openarm_description_moveit_config/share/openarm_description_moveit_config/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
openarm_description_moveit_config/install/openarm_description_moveit_config/share/openarm_description_moveit_config/cmake/: openarm_description_moveit_configConfig.cmake
openarm_description_moveit_config/install/openarm_description_moveit_config/share/openarm_description_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  openarm.ros2_control.xacro  openarm.srdf  openarm.urdf.xacro  ros2_controllers.yaml
openarm_description_moveit_config/install/openarm_description_moveit_config/share/openarm_description_moveit_config/launch/: demo.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
openarm_description_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
openarm_description_moveit_config/log/: latest_build
openarm_hardware/: README.md
openarm_moveit_config/: README.md
openarm_socketcan_control/openarm_control/: CMakeLists.txt  package.xml
openarm_socketcan_control/openarm_control/config/: openarm_composed_params.yaml  openarm_params.yaml
openarm_socketcan_control/openarm_control/include/openarm_socketcan_ros2/: openarm_node.hpp
openarm_socketcan_control/openarm_control/launch/: openarm_node.launch.py
openarm_socketcan_control/openarm_control/src/: openarm_node.cpp  openarm_node_main.cpp
openarm_socketcan_control/openarm_interfaces/: CMakeLists.txt  package.xml
openarm_socketcan_control/openarm_interfaces/msg/: ArmCommand.msg  ArmState.msg  GripperCommand.msg  GripperState.msg  MITCommand.msg  MITCommandArray.msg
openarm_socketcan_control/openarm_interfaces/srv/: QueryParam.srv
